--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- the body section is the protein. this is how you write a comment describing your code in HTML. the body section is for all content that is visible. Keep it here! Semantic structure is just as important as syntax. -->
 
 	<body>
-		<h1>Class Work - HELLLLO</h1>
+		<h1>Class Work - HELLLLOOOOOOOOOOO</h1>
 		<h2>An archive of student work from 2019-2025</h2>
 		<h3>by: Chris Lange</h3>
 			<p>Welcome to my website! Here is a demo of just freestyle writing and marking up code. At the heart of HTML and CSS is simply style language. A website is just a folder! I hope you're enjoying this interactive experience so far.
