--- a/index.html
+++ b/index.html
@@ -27,14 +27,8 @@
 			</p>
 			<p>This is a second paragraph apart of the same column of text.</p>
 			
-
-
-
 		<div>
-			
-			<a href="projects.html">Projects</a>
-
-
+			<a href="projects.html">Projectssss</a>
 		</div>
 
 		<img src="images/asc-sticker-icon-patch-pin-02.png">
