--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		</div>
 
 		<img src="images/asc-sticker-icon-patch-pin-02.png">
+		<img src="images/a-s-c.org-risograph-poster-2024-by-chris-lange.jpg">
 	</body>
 
 
