--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Class Work - Homepage</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 
 
@@ -27,12 +27,82 @@
 			</p>
 			<p>This is a second paragraph apart of the same column of text.</p>
 			
-		<div>
+
+
+
+
+
+		<section>
+			<a href="projects.html">Projectssss</a>
+	
+					<p>Welcome to my website! Here is a demo of just freestyle writing and marking up code. At the heart of HTML and CSS is simply style language. A website is just a folder! I hope you're enjoying this interactive experience so far.</p>
+		</section>
+
+
+		<div class="relative">
 			<a href="projects.html">Projectssss</a>
 		</div>
 
+
+
+
+
+
+<div class="absolute">
+
+	<button class="relative">
+	<h3>Welcome to my website! Here is a demo of just freestyle writing and marking up code. At the heart of HTML and CSS is simply style language. A website is just a folder! I hope you're enjoying this interactive experience so far.</h3>
+	</button>
+
+</div>
+
+
+
+
+
+
+
+<br><br>
+
 		<img src="images/asc-sticker-icon-patch-pin-02.png">
 		<img src="images/a-s-c.org-risograph-poster-2024-by-chris-lange.jpg">
+
+
+
+
+<!--Step 1: Define your section of your page using #ID -->
+<section>
+	<h1>Here is a table of contents</h1>
+
+<nav class="absolute">		
+	<a href="#chapter1">Chapter 1 →</a>
+	<br>
+   	<a href="#chapter2">Chapter 2 →</a>
+   	<br>
+   	<a href="#chapter3">Chapter 3→</a>
+   	<br>
+   	<a href="#chapter4">Chapter 4→</a>
+   	<br>
+</nav>
+</section>
+
+<!-- Down below the page navigation, here i've added an unique from the table of contents above to jump from its link to its text.-->
+<h3 id="chapter1">Chapter 1: The Taupe Blazer</h3>
+
+<p>
+Copper plaques on the wall attest to your various leadership abilities inside and outside the organization: One, the Partner in Innovation Banquet Award 2011, is from the sales team for your support of its 18-month effort to reduce cycle friction—net sales increased 6.5 percent; another, the Civic Guidelight 2008, is for overseeing a volunteer team that repainted a troubled public school top to bottom.</p>
+
+<p>
+Copper plaques on the wall attest to your various leadership abilities inside and outside the organization: One, the Partner in Innovation Banquet Award 2011, is from the sales team for your support of its 18-month effort to reduce cycle friction—net sales increased 6.5 percent; another, the Civic Guidelight 2008, is for overseeing a volunteer team that repainted a troubled public school top to bottom.</p>
+
+<p>
+Copper plaques on the wall attest to your various leadership abilities inside and outside the organization: One, the Partner in Innovation Banquet Award 2011, is from the sales team for your support of its 18-month effort to reduce cycle friction—net sales increased 6.5 percent; another, the Civic Guidelight 2008, is for overseeing a volunteer team that repainted a troubled public school top to bottom.</p>
+
+
+
+
+
+
 	</body>
 
 
